// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultTestViewContainerProvider can create assessment automated checks test view container 1`] = `
<AdhocIssuesTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  includeStepsText={false}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;

exports[`DefaultTestViewContainerProvider can create assessment test view container 1`] = `
<AssessmentTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;

exports[`DefaultTestViewContainerProvider can create issues test view container 1`] = `
<AdhocIssuesTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;

exports[`DefaultTestViewContainerProvider can create needs review test view container 1`] = `
<AdhocIssuesTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  cardSelectionMessageCreator={{}}
  cardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  instancesSection={[Function]}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;

exports[`DefaultTestViewContainerProvider can create static test view container 1`] = `
<AdhocStaticTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;

exports[`DefaultTestViewContainerProvider can create tab stops test view container 1`] = `
<AdhocTabStopsTestView
  assessmentActionMessageCreator={{}}
  assessmentCardSelectionMessageCreator={{}}
  assessmentCardsViewData={{}}
  assessmentStoreData={{}}
  automatedChecksCardSelectionMessageCreator={{}}
  automatedChecksCardsViewData={{}}
  detailsViewActionMessageCreator={{}}
  needsReviewCardSelectionMessageCreator={{}}
  needsReviewCardsViewData={{}}
  someParentProp="parent-prop"
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
  visualizationStoreData={{}}
/>
`;
